----------
v6.0.1-git
----------



------
v6.0.0
------

[mms] Fix regression in adding an attachment in minimal view.


---------
v6.0.0RC2
---------

[jan] Update Polish translation (Krzysztof Kozera <krzysztof113@o2.pl>).
[jan] Update Dutch translation (Arjen de Korte <arjen+horde@de-korte.org>).
[mms] Fix regression causing large amounts of whitespace padding to be added to
      compose text in basic view.
[mms] Fix regression in sending messages in basic/minimal mode if no attachment
      is added (Bug #11582).
[jan] Fix key navigation in message view of basic mode.


---------
v6.0.0RC1
---------

[mms] Attach as many files as possible instead of aborting on first failed
      attachment add.
[mms] Fix determining first/last unseen message in a mailbox (use message date
      instead of arrival date).
[jan] Don't show application menus in iTip MIME viewer popups.
[mms] Hide subfolder creation option in dynamic view if IMAP server indicates
      that child mailboxes cannot be created.
[mms] Correctly send deleted flag information to browser cache when using
      dynamic/smartmobile view (Bug #11362).
[mms] Auto-update folders list in smartmobile view if special mailbox is
      auto-created (Request #11482).
[mms] Load folders list on-demand in smartmobile view.
[mms] Fix thread view when mailbox is not thread sorted (Bug #11320).
[mms] Display message range when dragging slider on dynamic mailbox page.


-----------
v6.0.0beta4
-----------

[mms] Add predefined templates to ACL management screen (Request #10648).
[mms] Capture key shortcuts on dynamic mailbox page even if focus is on IFRAME
      HTML message data (Bug #11428).
[mms] All IMP templates now use Horde_View.
[mms] Add swipe action buttons to the smartmobile mailbox page.
[mms] Optimize loading of message bodies when using dynamic view.
[mms] Load new mailbox when renaming current mailbox in dynamic view (Request
      #11394).